# Lang

./: .gitignore  README.md  program  tests.bat
compiler/: main.py  prog
compiler/code_examples/: blocksFT.txt  blocksIf.txt  fibb.txt  strings.txt  switch.txt  types.txt  unary.txt
compiler/my_parser/: BytecodeLine.py  CheckErrors.py  CodeBlock.py  CompileBlocks.py  EvaluationTree.py  LinkBlocks.py  Opcodes.py  Operators.py  SimpleOptimizations.py  SortBlocks.py  Statement.py  StringToTree.py  TextToBlocks.py  __init__.py  bytecode_line.py  check_errors.py  code_block.py  compile_blocks.py  data_type.py  evaluation_tree.py  link_blocks.py  scope.py  string_to_tree.py  text_to_blocks.py  variable.py
compiler/my_parser/exceptions/: CompilerError.py  CompilerWarning.py  InternalError.py  compiler_error.py  compiler_warning.py  internal_error.py
compiler/my_parser/optimizations/: precalculate_constants.py  remove_empty_blocks.py  sort_blocks.py
docs/: Bytecode.md  Standart.md  vm_specs.txt
tester/: main.py
tests/: FTCondition.out.txt  FTCondition.txt  FTStartBlock.out.txt  FTStartBlock.txt  boolean.out.txt  boolean.txt  emptyBlocks.out.txt  emptyBlocks.txt  fibb.out.txt  fibb.txt  intWrite.out.txt  intWrite.txt  primes.out.txt  primes.txt  readWriteCasts.in.txt  readWriteCasts.out.txt  readWriteCasts.txt  someWeirdTest.txt  stringsBasic.out.txt  stringsBasic.txt  switch.out.txt  switch.txt
vm/: CMakeLists.txt  data_cell.h  launcher.c  opcode.h  prog  read_helpers.c  read_helpers.h  tester.c  utils.c  utils.h  vm.c  vm.h
vm/tests/: 1  2
(+14 files in other folders)
